  work-around for log files created by external programs with the wrong
  user and/or group. Note that it was long said that this "functionality"
  would break once we go for serious privilege drop code, so hopefully
  nobody still depends on it (and, if so, they lost...).
- bugfix: pipes not opened in full priv mode when privs are to be dropped
- this begins a new devel branch for v5
- added support for user-level PRI provided via systemd
- added new config directive $InputTCPFlowControl to select if tcp
  received messages shall be flagged as light delayable or not.
- enhanced omhdfs to support batching mode. This permits to increase
  performance, as we now call the HDFS API with much larger message
  sizes and far more infrequently
- bugfix: failover did not work correctly if repeated msg reduction was on
  affected directive was: $ActionExecOnlyWhenPreviousIsSuspended on
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=236
---------------------------------------------------------------------------
Version 5.8.1  [V5-stable] (rgerhards), 2011-04-??
- bugfix: $myhostname not available in RainerScript (and no error message)
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=233
- bugfix: doc for impstats had wrong config statements
  also, config statements were named a bit inconsistent, resolved that
  problem by introducing an alias and only documenting the consistent
  statements
  Thanks to Marcin for bringing up this problem.
- bugfix: IPv6-address could not be specified in omrelp
  this was due to improper parsing of ":"
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=250
---------------------------------------------------------------------------
Version 5.8.0  [V5-stable] (rgerhards), 2011-04-12

This is the new v5-stable branch, importing all feature from the 5.7.x
versions. To see what has changed in regard to the previous v5-stable,
check the Changelog for 5.7.x below.

- bugfix: race condition in deferred name resolution